<resources>
    <string name="app_name">TravelMantics</string>
    <string name="hint_title">Deal Title</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Description</string>
    <string name="menu_save">Save</string>
    <string name="deal_image">deal image</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
</resources>
